--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "express": "4.16.4",
+    "mongodb": "3.3.3",
+    "mongoose": "^5.7.7",
     "pug": "^2.0.4"
   },
   "keywords": []
